Fixed z-index bug with datepicker & active button.

--- a/example-dashboards/comparison/src/components/DateRangeSelection.css
+++ b/example-dashboards/comparison/src/components/DateRangeSelection.css
@@ -8,3 +8,7 @@
   flex-wrap: nowrap;
   justify-content: space-between;
 }
+
+.DateRangeSelection-dateSelection .react-datepicker-popper {
+  z-index: 3;
+}
